# MC_ServerStat

./: README.md  pyproject.toml
mc_serverstat/: ServerBot.py
