[tool.poetry]
name = "mc-serverstat"
version = "0.1.0"
description = ""
authors = ["brensen11 <90063365+brensen11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mcstatus = "^11.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
